@@ -77,7 +77,6 @@
     <File name="./gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./gtk-gui/CSharpBinding.FormattingPanelWidget.cs" subtype="Code" buildaction="Compile" />
     <File name="./CSharpAmbience.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Parser/TypeNameResolver.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="MonoDevelop.Core" />
